# drop-it

./: Cargo.toml  LICENSE-MIT
scripts/: create-service.ps1  delete-service.ps1
src/: lib.rs  main.rs  server.rs  service_event_handler.rs
