[package]
authors = ["Juan Lledo <juan.lledo@hotmail.com>"]
edition = "2018"
name = "drop-it"
version = "0.1.0"

[package.metadata.winres]
FileDescription = "Drop It"

[build-dependencies]
winres = "0.1.11"

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.43"
futures = "0.3.17"
windows-service = "0.4.0"
system_shutdown = "4.0.1"
